src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__library_ui_tests__tests__snapshot_tests__AddMovieSelectQualityProfile.snap
---
source: src/ui/radarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title ▼                                      Year   Studio              Runtime   Rating     Language   Size       Quality Profile  Monitored  Tags               
=> Test                                         2023   21st Century Alex   2h 0m     R          English    3.30 GB    HD - 1080p       🏷          alex               
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                     ╭─────────────────────────────────────────────────────  Add Movie  ──────────────────────────────────────────────────────╮                      
                     │test                                                                                                                    │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                      
                     ╭───────────╭──────────────────────────────────────  Add Movie - Test  ───────────────────────────────────────╮──────────╮                      
                     │   ✔  Title│                                    New movie blah blah blah                                     │          │                      
                     │=> ✔  Test │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                               ╭────────────────────────────────────────────╮    │          │                      
                     │           │                                ╭───────────────────────────────╮                         ▼ │    │          │                      
                     │           │                                │HD - 1080p                     │───────────────────────────╯    │          │                      
                     │           │                                │                               │───────────────────────────╮    │          │                      
                     │           │                                │                               │                         ▼ │    │          │                      
                     │           │                                │                               │───────────────────────────╯    │          │                      
                     │           │                                │                               │───────────────────────────╮    │          │                      
                     │           │                         Minimum│                               │                         ▼ │    │          │                      
                     │           │                                │                               │───────────────────────────╯    │          │                      
                     │           │                                │                               │───────────────────────────╮    │          │                      
                     │           │                              Qu│                               │                         ▼ │    │          │                      
                     │           │                                │                               │───────────────────────────╯    │          │                      
                     │           │                                │                               │───────────────────────────╮    │          │                      
                     │           │                                │                               │                           │    │          │                      
                     │           │                                │                               │───────────────────────────╯    │          │                      
                     │           │                                ╰───────────────────────────────╯                                │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │╭───────────────────────────────────────────────╮╭──────────────────────────────────────────────╮│          │                      
                     │           ││                      Add                      ││                    Cancel                    ││          │                      
                     │           │╰───────────────────────────────────────────────╯╰──────────────────────────────────────────────╯│          │                      
                     │           ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯          │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
